# kantorovich

./: CLAUDE.md  Cargo.toml  LICENSE  README.md  kantorovich.pyi  pyproject.toml
.github/workflows/: test.yml
benchmarks/: bench_vs_pot.py
docs/math/: barycenters.md  sinkhorn.md  sinkhorn_divergence.md  sliced_wasserstein.md  unbalanced_ot.md
examples/: comparing_distributions.py
src/: barycenter.rs  cost.rs  divergence.rs  error.rs  exact_1d.rs  lib.rs  sinkhorn.rs  sliced.rs  unbalanced.rs
