[package]
name = "kantorovich"
version = "0.1.0"
edition = "2024"
description = "High-performance optimal transport library"
license = "MIT"

[lib]
name = "kantorovich"
crate-type = ["cdylib", "rlib"]

[dependencies]
pyo3 = { version = "0.27.0", features = ["extension-module"] }
numpy = "0.27"
thiserror = "2"
faer = "0.22"
rayon = "1.10"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
